--- a/config/Web-1.config
+++ b/config/Web-1.config
@@ -9,7 +9,7 @@
   </configSections>
   <appSettings>
     <!--数据库连接字符串-->
-    <add key="ConnectionString" value="server=127.0.0.1;database=wx_pinguo;uid=root;pwd=Abc123" />
+    <add key="ConnectionString" value="server=127.0.0.1;database=;uid=root;pwd=" />
     <!--微信接口地址-->
     <add key="WxApiServer" value="https://api.weixin.qq.com/" />
     <!--物流接口地址-1-->
@@ -21,7 +21,7 @@
     <!--Redis主机端口-->
     <add key="RedisPort" value="6379" />
     <!--Redis连接密码-->
-    <add key="RedisPassword" value="Taylor.Yang@11734_t" />
+    <add key="RedisPassword" value="" />
     <!--缓存默认过期时间，单位：分钟，默认60分钟（1小时）-->
     <add key="DefaultTimeOut" value="60" />
   </appSettings>
