--- a/config/Web.config
+++ b/config/Web.config
@@ -17,7 +17,7 @@
   </connectionStrings>
   <appSettings>
     <!--数据库连接字符串-->
-    <add key="ConnectionString" value="server=127.0.0.1;database=wx_pinguo;uid=root;pwd=Abc123" />
+    <add key="ConnectionString" value="server=127.0.0.1;database=;uid=root;pwd=" />
   </appSettings>
   <!--调度器配置-->
   <quartz>
