--- a/config/log4net.config
+++ b/config/log4net.config
@@ -10,7 +10,7 @@
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="Encoding" value="utf-8" />
-      <file type="log4net.Util.PatternString" value="log\\%date{yyyy-MM-dd}.txt" />
+      <file type="log4net.Util.PatternString" value="log\\%date{yyyy-MM-dd-2728-237-059}.txt" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <datePattern value="yyyy-MM-dd&quot;.txt&quot;" />
       <appendToFile value="true" />
